use deepseek(locally)

--- a/src/test_db.ipynb
+++ b/src/test_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -34,9 +34,8 @@
       "22     Dr. Rachel Perez\n",
       "23    Dr. Steven Harris\n",
       "24      Dr. Megan Evans\n",
-      "25         Dr. John Doe\n",
-      "26          Dr. Mahmoud\n",
-      "27                   mo\n",
+      "25           Dr. mariem\n",
+      "26           dr.mahmoud\n",
       "Name: Doctor Name, dtype: object\n"
      ]
     }
@@ -57,6 +56,413 @@
     "\n",
     "# Close the connection\n",
     "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Doctor Name</th>\n",
+       "      <th>Monday</th>\n",
+       "      <th>Tuesday</th>\n",
+       "      <th>Wednesday</th>\n",
+       "      <th>Thursday</th>\n",
+       "      <th>Friday</th>\n",
+       "      <th>Saturday</th>\n",
+       "      <th>Sunday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Dr. Alice Smith</td>\n",
+       "      <td>09:00-14:00</td>\n",
+       "      <td>09:00-14:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>09:00-14:00</td>\n",
+       "      <td>09:00-14:00</td>\n",
+       "      <td>10:00-13:00</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Dr. John Brown</td>\n",
+       "      <td>12:00-17:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>12:00-17:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>12:00-17:00</td>\n",
+       "      <td>10:00-15:00</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Dr. Sarah Lee</td>\n",
+       "      <td>08:00-12:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>08:00-12:00</td>\n",
+       "      <td>08:00-12:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Dr. Michael Tan</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>14:00-18:00</td>\n",
+       "      <td>14:00-18:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>14:00-18:00</td>\n",
+       "      <td>09:00-12:00</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Dr. Emily Davis</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>10:00-15:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>10:00-15:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>10:00-14:00</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Dr. James Wilson</td>\n",
+       "      <td>10:00-14:00</td>\n",
+       "      <td>10:00-14:00</td>\n",
+       "      <td>10:00-14:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Dr. Linda Carter</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>13:00-18:00</td>\n",
+       "      <td>13:00-18:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>12:00-16:00</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Dr. David Miller</td>\n",
+       "      <td>14:00-19:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>14:00-19:00</td>\n",
+       "      <td>14:00-19:00</td>\n",
+       "      <td>09:00-13:00</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Dr. Karen White</td>\n",
+       "      <td>08:00-12:00</td>\n",
+       "      <td>08:00-12:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>08:00-12:00</td>\n",
+       "      <td>08:00-11:00</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Dr. Thomas Green</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>12:00-17:00</td>\n",
+       "      <td>12:00-17:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>12:00-17:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Dr. Susan Baker</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>09:00-12:00</td>\n",
+       "      <td>09:00-12:00</td>\n",
+       "      <td>09:00-12:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>09:00-12:00</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Dr. Robert Black</td>\n",
+       "      <td>13:00-17:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>13:00-17:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>13:00-17:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Dr. Nancy Moore</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>11:00-15:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>11:00-15:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>09:00-13:00</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Dr. William Clark</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>14:00-18:00</td>\n",
+       "      <td>14:00-18:00</td>\n",
+       "      <td>14:00-18:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Dr. Mary Scott</td>\n",
+       "      <td>07:00-12:00</td>\n",
+       "      <td>07:00-12:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>07:00-12:00</td>\n",
+       "      <td>07:00-11:00</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Dr. Kevin Lewis</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>12:00-17:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>12:00-17:00</td>\n",
+       "      <td>10:00-14:00</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Dr. Barbara Hall</td>\n",
+       "      <td>08:00-13:00</td>\n",
+       "      <td>08:00-13:00</td>\n",
+       "      <td>08:00-13:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Dr. Richard King</td>\n",
+       "      <td>15:00-19:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>15:00-19:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>15:00-19:00</td>\n",
+       "      <td>10:00-14:00</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Dr. Jessica Adams</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>09:00-12:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>09:00-12:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Dr. Charles Bell</td>\n",
+       "      <td>12:00-16:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>12:00-16:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>10:00-13:00</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Dr. Angela Lopez</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>08:00-12:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>08:00-12:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Dr. Frank Turner</td>\n",
+       "      <td>13:00-18:00</td>\n",
+       "      <td>13:00-18:00</td>\n",
+       "      <td>13:00-18:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>12:00-16:00</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Dr. Rachel Perez</td>\n",
+       "      <td>09:00-13:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>09:00-13:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>09:00-13:00</td>\n",
+       "      <td>10:00-12:00</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Dr. Steven Harris</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>14:00-18:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>14:00-18:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>12:00-15:00</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Dr. Megan Evans</td>\n",
+       "      <td>10:00-14:00</td>\n",
+       "      <td>10:00-14:00</td>\n",
+       "      <td>10:00-14:00</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Dr. mariem</td>\n",
+       "      <td>10 AM - 6 PM</td>\n",
+       "      <td>10 AM - 6 PM</td>\n",
+       "      <td>10 AM - 6 PM</td>\n",
+       "      <td>10 AM - 6 PM</td>\n",
+       "      <td>10 AM - 6 PM</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>dr.mahmoud</td>\n",
+       "      <td>09:00-14:00</td>\n",
+       "      <td>09:00-14:00</td>\n",
+       "      <td>09:00-14:00</td>\n",
+       "      <td>09:00-14:00</td>\n",
+       "      <td>09:00-14:00</td>\n",
+       "      <td>09:00-14:00</td>\n",
+       "      <td>09:00-14:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Doctor Name        Monday       Tuesday     Wednesday      Thursday  \\\n",
+       "0     Dr. Alice Smith   09:00-14:00   09:00-14:00           Off   09:00-14:00   \n",
+       "1      Dr. John Brown   12:00-17:00           Off   12:00-17:00           Off   \n",
+       "2       Dr. Sarah Lee   08:00-12:00           Off   08:00-12:00   08:00-12:00   \n",
+       "3     Dr. Michael Tan           Off   14:00-18:00   14:00-18:00           Off   \n",
+       "4     Dr. Emily Davis           Off   10:00-15:00           Off   10:00-15:00   \n",
+       "5    Dr. James Wilson   10:00-14:00   10:00-14:00   10:00-14:00           Off   \n",
+       "6    Dr. Linda Carter           Off           Off   13:00-18:00   13:00-18:00   \n",
+       "7    Dr. David Miller   14:00-19:00           Off           Off   14:00-19:00   \n",
+       "8     Dr. Karen White   08:00-12:00   08:00-12:00           Off           Off   \n",
+       "9    Dr. Thomas Green           Off   12:00-17:00   12:00-17:00           Off   \n",
+       "10    Dr. Susan Baker           Off   09:00-12:00   09:00-12:00   09:00-12:00   \n",
+       "11   Dr. Robert Black   13:00-17:00           Off   13:00-17:00           Off   \n",
+       "12    Dr. Nancy Moore           Off   11:00-15:00           Off   11:00-15:00   \n",
+       "13  Dr. William Clark           Off           Off   14:00-18:00   14:00-18:00   \n",
+       "14     Dr. Mary Scott   07:00-12:00   07:00-12:00           Off           Off   \n",
+       "15    Dr. Kevin Lewis           Off   12:00-17:00           Off           Off   \n",
+       "16   Dr. Barbara Hall   08:00-13:00   08:00-13:00   08:00-13:00           Off   \n",
+       "17   Dr. Richard King   15:00-19:00           Off   15:00-19:00           Off   \n",
+       "18  Dr. Jessica Adams           Off   09:00-12:00           Off   09:00-12:00   \n",
+       "19   Dr. Charles Bell   12:00-16:00           Off   12:00-16:00           Off   \n",
+       "20   Dr. Angela Lopez           Off           Off   08:00-12:00           Off   \n",
+       "21   Dr. Frank Turner   13:00-18:00   13:00-18:00   13:00-18:00           Off   \n",
+       "22   Dr. Rachel Perez   09:00-13:00           Off   09:00-13:00           Off   \n",
+       "23  Dr. Steven Harris           Off   14:00-18:00           Off   14:00-18:00   \n",
+       "24    Dr. Megan Evans   10:00-14:00   10:00-14:00   10:00-14:00           Off   \n",
+       "25         Dr. mariem  10 AM - 6 PM  10 AM - 6 PM  10 AM - 6 PM  10 AM - 6 PM   \n",
+       "26         dr.mahmoud   09:00-14:00   09:00-14:00   09:00-14:00   09:00-14:00   \n",
+       "\n",
+       "          Friday     Saturday       Sunday  \n",
+       "0    09:00-14:00  10:00-13:00          Off  \n",
+       "1    12:00-17:00  10:00-15:00          Off  \n",
+       "2            Off          Off          Off  \n",
+       "3    14:00-18:00  09:00-12:00          Off  \n",
+       "4            Off  10:00-14:00          Off  \n",
+       "5            Off          Off          Off  \n",
+       "6            Off  12:00-16:00          Off  \n",
+       "7    14:00-19:00  09:00-13:00          Off  \n",
+       "8    08:00-12:00  08:00-11:00          Off  \n",
+       "9    12:00-17:00          Off          Off  \n",
+       "10           Off  09:00-12:00          Off  \n",
+       "11   13:00-17:00          Off          Off  \n",
+       "12           Off  09:00-13:00          Off  \n",
+       "13   14:00-18:00          Off          Off  \n",
+       "14   07:00-12:00  07:00-11:00          Off  \n",
+       "15   12:00-17:00  10:00-14:00          Off  \n",
+       "16           Off          Off          Off  \n",
+       "17   15:00-19:00  10:00-14:00          Off  \n",
+       "18           Off          Off          Off  \n",
+       "19           Off  10:00-13:00          Off  \n",
+       "20   08:00-12:00          Off          Off  \n",
+       "21           Off  12:00-16:00          Off  \n",
+       "22   09:00-13:00  10:00-12:00          Off  \n",
+       "23           Off  12:00-15:00          Off  \n",
+       "24           Off          Off          Off  \n",
+       "25  10 AM - 6 PM          Off          Off  \n",
+       "26   09:00-14:00  09:00-14:00  09:00-14:00  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
